5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1650_2449.log
== TEST (2019-04-15 17:55:26) 
-- CODE:
a = float(input("bota o coe "a" ai man"))
-- ERROR:
File "XXXX", line 1
    a = float(input("bota o coe "a" ai man"))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:55:35) 
-- CODE:
a = float(input("bota o coe a ai man"))
-- ERROR:
File "XXXX", line 1
    a = float(input("bota o coe "a" ai man"))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
